--- a/index.html
+++ b/index.html
@@ -14,5 +14,26 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="home">
+      <div class="menu">
+        <div class="x-menu">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        <nav>
+          <ul>
+            <li>About me</li>
+            <li>Projects</li>
+            <li>Contact</li>
+          </ul>
+        </nav>
+      </div>
+      <div class="main">
+        <h1></h1>
+        <p></p>
+      </div>
+    </section>
+  </body>
 </html>
