Edit Home/ Adding informations

--- a/index.html
+++ b/index.html
@@ -22,18 +22,29 @@
           <div></div>
           <div></div>
         </div>
-        <nav>
+        <nav class="top-menu">
           <ul>
             <li>About me</li>
             <li>Projects</li>
             <li>Contact</li>
           </ul>
         </nav>
+        <div class="profile-img">
+          <img src="./img/me-driving.jpg" alt="Me driving" />
+        </div>
       </div>
       <div class="main">
-        <h1></h1>
-        <p></p>
+        <div class="text">
+          <h1>Iulian Stan</h1>
+          <p>Former military / Current web developer student</p>
+        </div>
+        <div class="image">
+          <img src="./img/me.jpg" alt="Iulian Stan's image" />
+        </div>
       </div>
     </section>
+    <section class="about"></section>
+    <section class="projects"></section>
+    <section class="contact"></section>
   </body>
 </html>
