--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
       <div class="main">
         <div class="text">
-          <h1>Iulian Stan</h1>
+          <h1>Hi, I'm Iulian Stan</h1>
           <p>Former military / Current web developer student</p>
         </div>
         <div class="image">
@@ -43,8 +43,14 @@
         </div>
       </div>
     </section>
-    <section class="about"></section>
-    <section class="projects"></section>
-    <section class="contact"></section>
+    <section class="about">
+      <h1>Who am I</h1>
+    </section>
+    <section class="projects">
+      <h1>My projects</h1>
+    </section>
+    <section class="contact">
+      <h1>Contact me</h1>
+    </section>
   </body>
 </html>
