Editing Css home page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="copyright" content="Copyright owner" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -24,9 +25,9 @@
         </div>
         <nav class="top-menu">
           <ul>
-            <li>About me</li>
-            <li>Projects</li>
-            <li>Contact</li>
+            <li><a href="#about-me">About me</a></li>
+            <li><a href="#my-projects">Projects</a></li>
+            <li><a href="#contact-me">Contact</a></li>
           </ul>
         </nav>
         <div class="profile-img">
@@ -43,13 +44,13 @@
         </div>
       </div>
     </section>
-    <section class="about">
+    <section id="about-me" class="about">
       <h1>Who am I</h1>
     </section>
-    <section class="projects">
+    <section id="my-projects" class="projects">
       <h1>My projects</h1>
     </section>
-    <section class="contact">
+    <section id="contact-me" class="contact">
       <h1>Contact me</h1>
     </section>
   </body>
