Editing Css Home page header

--- a/index.html
+++ b/index.html
@@ -17,24 +17,26 @@
   </head>
   <body>
     <section class="home">
-      <div class="menu">
-        <div class="x-menu">
-          <div></div>
-          <div></div>
-          <div></div>
+      <div class="home-header">
+        <div class="top-menu">
+          <div class="x-menu">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <nav class="menu">
+            <ul>
+              <li><a href="#about-me">About me</a></li>
+              <li><a href="#my-projects">Projects</a></li>
+              <li><a href="#contact-me">Contact</a></li>
+            </ul>
+          </nav>
         </div>
-        <nav class="top-menu">
-          <ul>
-            <li><a href="#about-me">About me</a></li>
-            <li><a href="#my-projects">Projects</a></li>
-            <li><a href="#contact-me">Contact</a></li>
-          </ul>
-        </nav>
         <div class="profile-img">
           <img src="./img/me-driving.jpg" alt="Me driving" />
         </div>
       </div>
-      <div class="main">
+      <div class="home-main">
         <div class="text">
           <h1>Hi, I'm Iulian Stan</h1>
           <p>Former military / Current web developer student</p>
