Adding info in About section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,26 @@
     </section>
     <section id="about-me" class="about">
       <h1>Who am I</h1>
+      <div class="about-main">
+        <p>
+          After 10 years of military career in the Romanian Army <br />
+          I decided to change my lifestyle, moving with my family to <br />
+          Germany. Having the desire to learn to code I decided to give <br />
+          myself a chance to change my career.I’m currently a student <br />
+          and I'm learning web development at
+          <a
+            href="http://www.digitalcareerinstitute.org"
+            target="_blank"
+            rel="noopener noreferrer"
+            >DCI Digital Career Institute</a
+          >.
+        </p>
+        <p>
+          My hobbies are: <br />
+          coding, music, photography, cars, fishing, <br />
+          travel, playing entertainment poker and video games.
+        </p>
+      </div>
     </section>
     <section id="my-projects" class="projects">
       <h1>My projects</h1>
