About section done for the momment

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
       <div class="home-main">
         <div class="text">
           <h1>Hi, I'm Iulian Stan</h1>
-          <p>Former military / Current web developer student</p>
+          <p>
+            Former military policeman <br />
+            Current web developer student
+          </p>
         </div>
         <div class="image">
           <img src="./img/me.jpg" alt="Iulian Stan's image" />
@@ -53,7 +56,7 @@
           After 10 years of military career in the Romanian Army <br />
           I decided to change my lifestyle, moving with my family to <br />
           Germany. Having the desire to learn to code I decided to give <br />
-          myself a chance to change my career.I’m currently a student <br />
+          myself a chance to change my career. I’m currently a student <br />
           and I'm learning web development at
           <a
             href="http://www.digitalcareerinstitute.org"
@@ -65,8 +68,47 @@
         <p>
           My hobbies are: <br />
           coding, music, photography, cars, fishing, <br />
-          travel, playing entertainment poker and video games.
+          traveling, playing entertainment poker and video games.
         </p>
+      </div>
+      <div class="about-bottom">
+        <legend class="legend">
+          Some photos of street lights with fancy effects made by me
+        </legend>
+        <div class="about-img">
+          <img
+            src="./img/street-lights-1.jpg"
+            alt="street ligts fancy effects"
+          />
+          <img
+            src="./img/street-lights-2.jpg"
+            alt="street ligts fancy effects"
+          />
+          <img
+            src="./img/street-lights-3.jpg"
+            alt="street ligts fancy effects"
+          />
+          <img
+            src="./img/street-lights-4.jpg"
+            alt="street ligts fancy effects"
+          />
+          <img
+            src="./img/street-lights-5.jpg"
+            alt="street ligts fancy effects"
+          />
+          <img
+            src="./img/street-lights-6.jpg"
+            alt="street ligts fancy effects"
+          />
+          <img
+            src="./img/street-lights-7.jpg"
+            alt="street ligts fancy effects"
+          />
+          <img
+            src="./img/street-lights-8.jpg"
+            alt="street ligts fancy effects"
+          />
+        </div>
       </div>
     </section>
     <section id="my-projects" class="projects">
