Working on Projects section

--- a/index.html
+++ b/index.html
@@ -113,6 +113,30 @@
     </section>
     <section id="my-projects" class="projects">
       <h1>My projects</h1>
+      <div>
+        <h3>After I learned the basics of:</h3>
+        <iframe
+          src="https://img.shields.io/badge/OS-Linux-informational?style=flat&logo=Linux&logoColor=yellow&color=success"
+          frameborder="0"
+        ></iframe>
+        <iframe
+          src="https://img.shields.io/badge/Editor-Visual_Studio_Code-informational?style=flat&logo=Visual-Studio-Code&logoColor=blue&color=success"
+          frameborder="0"
+        ></iframe>
+        <iframe
+          src="https://img.shields.io/badge/Code-JavaScript-informational?style=flat&logo=JavaScript&logoColor=white&color=success"
+          frameborder="0"
+        ></iframe>
+
+        <iframe
+          src="https://img.shields.io/badge/markup_language-HTML-informational?style=flat&logo=HTML5&logoColor=red&color=success"
+          frameborder="0"
+        ></iframe>
+        <iframe
+          src="https://img.shields.io/badge/style_sheet_language-CSS-informational?style=flat&logo=CSS3&logoColor=blue&color=success"
+          frameborder="0"
+        ></iframe>
+      </div>
     </section>
     <section id="contact-me" class="contact">
       <h1>Contact me</h1>
