Moving to Contact section

--- a/index.html
+++ b/index.html
@@ -113,59 +113,78 @@
     </section>
     <section id="my-projects" class="projects">
       <h1>My projects</h1>
-      <div>
-        <h2>After I learned the basics of:</h2>
-        <div>
-          <img
-            src="https://img.shields.io/badge/OS-Linux-informational?style=flat&logo=Linux&logoColor=yellow&color=success"
-            alt="logo"
-            class="logo"
-          />
-          <img
-            src="https://img.shields.io/badge/Editor-Visual_Studio_Code-informational?style=flat&logo=Visual-Studio-Code&logoColor=blue&color=success"
-            alt="logo"
-            class="logo"
-          />
-          <img
-            src="https://img.shields.io/badge/Code-JavaScript-informational?style=flat&logo=JavaScript&logoColor=white&color=success"
-            alt="logo"
-            class="logo"
-          />
 
-          <img
-            src="https://img.shields.io/badge/markup_language-HTML-informational?style=flat&logo=HTML5&logoColor=red&color=success"
-            alt="logo"
-            class="logo"
-          />
-          <img
-            src="https://img.shields.io/badge/style_sheet_language-CSS-informational?style=flat&logo=CSS3&logoColor=blue&color=success"
-            alt="logo"
-            class="logo"
-          />
-        </div>
-      </div>
+      <h2>After I learned the basics of:</h2>
       <div>
-        <h2>I was able to do some projects</h2>
-        <div>
-          <a
-            href="https://iuliansta.github.io/mobile-app/"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><img
-              src="./img/mobile-app.png"
-              alt="Mobile App"
-              class="mobile-app"
-          /></a>
-          <a
-            href="https://iuliansta.github.io/youTube-clone/"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><img
-              src="./img/youtubeClone.png"
-              alt="YouTube Clone"
-              class="youtube-clone"
-          /></a>
-        </div>
+        <img
+          src="https://img.shields.io/badge/OS-Linux-informational?style=flat&logo=Linux&logoColor=yellow&color=success"
+          alt="logo"
+          class="logo"
+        />
+        <img
+          src="https://img.shields.io/badge/Editor-Visual_Studio_Code-informational?style=flat&logo=Visual-Studio-Code&logoColor=blue&color=success"
+          alt="logo"
+          class="logo"
+        />
+        <img
+          src="https://img.shields.io/badge/Code-JavaScript-informational?style=flat&logo=JavaScript&logoColor=white&color=success"
+          alt="logo"
+          class="logo"
+        />
+
+        <img
+          src="https://img.shields.io/badge/markup_language-HTML-informational?style=flat&logo=HTML5&logoColor=red&color=success"
+          alt="logo"
+          class="logo"
+        />
+        <img
+          src="https://img.shields.io/badge/style_sheet_language-CSS-informational?style=flat&logo=CSS3&logoColor=blue&color=success"
+          alt="logo"
+          class="logo"
+        />
+      </div>
+
+      <h2>I was able to do some projects</h2>
+      <div>
+        <a
+          href="https://iuliansta.github.io/mobile-app/"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><img src="./img/mobile-app.png" alt="Mobile App" class="mobile-app"
+        /></a>
+        <a
+          href="https://iuliansta.github.io/youTube-clone/"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><img
+            src="./img/youtubeClone.png"
+            alt="YouTube Clone"
+            class="youtube-clone"
+        /></a>
+        <a
+          href="https://iuliansta.github.io/login-app/"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><img src="./img/login-app.png" alt="Login App" class="login-app"
+        /></a>
+        <a
+          href="https://iuliansta.github.io/periodic-table/"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><img
+            src="./img/periodic-table.png"
+            alt="Periodic Table"
+            class="periodic-table"
+        /></a>
+        <a
+          href="https://iuliansta.github.io/gallery-images/"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><img
+            src="./img/gallery-images.png"
+            alt="Puppy gallery App"
+            class="gallery-images"
+        /></a>
       </div>
     </section>
     <section id="contact-me" class="contact">
