--- a/index.html
+++ b/index.html
@@ -189,6 +189,47 @@
     </section>
     <section id="contact-me" class="contact">
       <h1>Contact me</h1>
+      <div>
+        <h2>
+          If you have any questions or <br />
+          if you want to collaborate with me, <br />
+          you can send me a message
+        </h2>
+        <form action="index.js" method="post">
+          <div>
+            <label for="name">Your Name:</label>
+            <input
+              type="text"
+              name="name"
+              id="name"
+              placeholder="Type your name"
+              required
+            />
+          </div>
+          <div>
+            <label for="email">Your E-mail:</label>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Type your e-mail"
+              required
+            />
+          </div>
+          <div>
+            <label for="message">Your Message:</label>
+            <textarea
+              name="message"
+              id="message"
+              cols="21"
+              rows="5"
+              placeholder="Type your message"
+              required
+            ></textarea>
+          </div>
+          <button type="submit" name="submit" id="submit">Send Message</button>
+        </form>
+      </div>
     </section>
   </body>
 </html>
