working on footer secion

--- a/index.html
+++ b/index.html
@@ -232,11 +232,32 @@
         </form>
       </div>
       <div>
-        <i class="fab fa-github">&nbsp;&#124;&nbsp;Github</i>
-        <i class="fab fa-linkedin">&nbsp;&#124;&nbsp;LinkedIn</i>
-        <i class="fab fa-google">&nbsp;&#124;&nbsp;G Mail</i>
-        <i class="fab fa-facebook-square">&nbsp;&#124;&nbsp;Facebook</i>
+        <h2>
+          You can
+          <button>
+            <a
+              href="mailto:iulianstanhithub@gmail.com?subject=Hi&body=Hi Iulian"
+              >e-mail me</a
+            >
+          </button>
+        </h2>
       </div>
+      <footer>
+        <div>
+          <i class="fab fa-github">&nbsp;&#124;&nbsp;Github</i>
+          <i class="fab fa-linkedin">&nbsp;&#124;&nbsp;LinkedIn</i>
+          <i class="fab fa-google">&nbsp;&#124;&nbsp;G Mail</i>
+          <i class="fab fa-facebook-square">&nbsp;&#124;&nbsp;Facebook</i>
+        </div>
+        <div>
+          <h4>
+            Made by <strong>Iulian Stan</strong>&nbsp;&#124;&nbsp; All
+            copyrights reserved ®
+            <span class="year"></span>
+          </h4>
+        </div>
+      </footer>
     </section>
+    <script src="./javascript/index.js"></script>
   </body>
 </html>
