Starting to edit Media links

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <h1 class="bounce-in-top">My projects</h1>
       <!-- Projects, H2 -->
       <h2>After I learned the basics of</h2>
-      <!-- Wha -->
+      <!-- What I learned images, logos -->
       <div>
         <img
           src="https://img.shields.io/badge/OS-Linux-informational?style=flat&logo=Linux&logoColor=yellow&color=success"
@@ -205,8 +205,9 @@
           class="logo"
         />
       </div>
-
+      <!-- Projects, H2 -->
       <h2>I was able to do some projects</h2>
+      <!-- Projects links -->
       <div>
         <a
           href="https://iuliansta.github.io/mobile-app/"
@@ -215,7 +216,7 @@
           ><img src="./img/mobile-app.png" alt="Mobile App" class="mobile-app"
         /></a>
         <a
-          href="https://iuliansta.github.io/youTube-clone/"
+          href="https://iuliansta.github.io/youtube-clone/"
           target="_blank"
           rel="noopener noreferrer"
           ><img
@@ -249,13 +250,17 @@
         /></a>
       </div>
     </section>
+    <!-- Contact section -->
     <section id="contact-me" class="contact">
+      <!-- Contact, H1 -->
       <h1 class="bounce-in-top">Contact me</h1>
       <div>
+        <!-- Contact, H2 -->
         <h2>
           If you have any questions or if you want to <br />
           collaborate with me, you can send me a message
         </h2>
+        <!-- Contact form -->
         <form action="index.js" method="post">
           <fieldset>
             <label for="name">Your Name:</label>
@@ -298,6 +303,7 @@
         </form>
       </div>
       <div>
+        <!-- Contact, H2 and direct mail button -->
         <h2>
           You can
           <button>
@@ -308,7 +314,9 @@
           </button>
         </h2>
       </div>
+      <!-- Footer -->
       <footer>
+        <!-- Social Media -->
         <div>
           <i class="fab fa-github">&nbsp;&#124;&nbsp;Github</i>
           <i class="fab fa-linkedin">&nbsp;&#124;&nbsp;LinkedIn</i>
@@ -316,6 +324,7 @@
           <i class="fab fa-facebook-square">&nbsp;&#124;&nbsp;Facebook</i>
         </div>
         <div>
+          <!-- Contact, H5 -->
           <h5>
             Made by <strong>Iulian Stan</strong>&nbsp;&#124;&nbsp; All
             copyrights reserved ®
@@ -324,6 +333,7 @@
         </div>
       </footer>
     </section>
+    <!-- Script link -->
     <script src="./javascript/index.js"></script>
   </body>
 </html>
