--- a/index.html
+++ b/index.html
@@ -25,29 +25,33 @@
     <!-- Mobile Media link -->
     <link
       rel="stylesheet"
-      media="screen and (max-width: 480px)"
       href="./css/mobile.css"
+      media="only screen and (max-width: 480px)"
     />
     <!-- Tablet Media link -->
     <link
       rel="stylesheet"
-      media="screen and (min-width: 481px) and (max-width: 767px)"
       href="./css/tablet.css"
+      media="only screen and (min-width: 481px) and (max-width: 767px)"
     />
     <!-- Tablet, Portrait mode Media link -->
     <link
       rel="stylesheet"
-      media="screen and (min-width: 768px) and (max-width: 1024px)"
       href="./css/tablet-portrait.css"
+      media=" only screen and (min-width: 768px) and (max-width: 1024px)"
     />
     <!-- Laptop, Desktop Media Link -->
     <link
       rel="stylesheet"
-      media="screen and (min-width: 1025px) and (max-width: 1280px)"
       href="./css/laptop.css"
+      media="only screen and (min-width:1025px) and (max-width:1280px)"
     />
     <!-- Large screen Media link -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="./css/style.css"
+      media="only screen and (min-width:1281px)"
+    />
   </head>
   <body>
     <!-- Home section -->
