Added Media Tablet Media

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         <div class="top-menu">
           <!-- X-menu for mobiles and tablets -->
           <div class="x-menu">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="x-top"></div>
+            <div class="x-center"></div>
+            <div class="x-bottom"></div>
           </div>
           <!-- Menu -->
           <nav class="menu">
