Added node server

--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
         <p>
           After 10 years of military career in the Romanian Army <br />
           I decided to change my lifestyle, moving with my family to <br />
-          Germany. Having the desire to learn to code I decided to give <br />
+          Germany. I've allways wanted to learn to code, so I decided to give
+          <br />
           myself a chance to change my career. I’m currently a student <br />
           and I'm learning web development at
           <!-- DCI Institute link -->
