Added Social Media links

--- a/index.html
+++ b/index.html
@@ -323,10 +323,30 @@
       <footer>
         <!-- Social Media -->
         <div>
-          <i class="fab fa-github">&nbsp;&#124;&nbsp;Github</i>
-          <i class="fab fa-linkedin">&nbsp;&#124;&nbsp;LinkedIn</i>
-          <i class="fab fa-google">&nbsp;&#124;&nbsp;G Mail</i>
-          <i class="fab fa-facebook-square">&nbsp;&#124;&nbsp;Facebook</i>
+          <a
+            href="https://github.com/iulianSta"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fab fa-github">&nbsp;&#124;&nbsp;Github</i></a
+          >
+          <a
+            href="http://www.linkedin.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fab fa-linkedin">&nbsp;&#124;&nbsp;LinkedIn</i></a
+          >
+          <a
+            href="http://www.google.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fab fa-google">&nbsp;&#124;&nbsp;G Mail</i></a
+          >
+          <a
+            href="http://www.facebook.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fab fa-facebook-square">&nbsp;&#124;&nbsp;Facebook</i></a
+          >
         </div>
         <div>
           <!-- Contact, H5 -->
